--- a/res/index.html
+++ b/res/index.html
@@ -115,7 +115,7 @@
         <div class="guy">
         <div>
             <h3 class="om">let's start</h3>
-            <p class="ru"><b>a conversion</b></p>
+            <p class="ru"><b>a conversation</b></p>
         </div>
         <div><p class="boss">Lorem ipsum dolor sit amet, ghjnjnkm consectetur adipiscing elit, sed donoti eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p></div>
        </div>
