--- a/res/index.html
+++ b/res/index.html
@@ -36,7 +36,7 @@
     <h3 class="i">DELIVERING PREMIUM SERVICES</h3>
     <p class="ii">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem mollitia, delectus quidem doloribus vero voluptatem.</p>
     <img class="gun" src="../img/Frame 7.png" width="1200px" height="747px" alt="">
-    <div class="arrow-down"><a href="#form"><img width="40px" src="../img/arrow-down.png" alt="arrow-down image"> </a></div>
+    <div class="arrow-down"><a href="#form"><img width="40px" class="arrow-down1" src="../img/arrow-down.png" alt="arrow-down image"> </a></div>
 
  </div> <br>
 
