--- a/res/index.html
+++ b/res/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>group three</title>
+    <title>SunnyVale</title>
     <link rel="stylesheet" href="../css/group3.css">
     <link rel="stylesheet" href="../css/sunnyvaleProject.css">
     <script src="https://kit.fontawesome.com/70411f3a4b.js" crossorigin="anonymous"></script>
