--- a/res/index.html
+++ b/res/index.html
@@ -34,7 +34,7 @@
 <!-- creating the first division of the body -->
  <div id="first-division">
     <h3 class="i">DELIVERING PREMIUM SERVICES</h3>
-    <p class="ii">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem mollitia, delectus quidem doloribus vero voluptatem.</p>
+    <p class="ii">Exceeding expectation swith every detail, delivering premium services that excellence.</p>
     <img class="gun" src="../img/Frame 7.png" width="1200px" height="747px" alt="">
     <div class="arrow-down"><a href="#form"><img width="40px" class="arrow-down1" src="../img/arrow-down.png" alt="arrow-down image"> </a></div>
 
@@ -50,7 +50,7 @@
     </div>
     <div class="inner-div">
         <div>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Experience the timeless elegance of sunnyvale, where architectural grandeur meets luxurious comfort. Stroll through manicured gardens, indulged in opolent interiors, and savor unique amenities designed for ultimate relaxation and refinement. Discover a sanctuary where every detail invites you to create unforgettable moments. 
         </div>
         <div>
             <img class="image" src="../img/Frame 9.png" alt="">
