--- a/res/index.html
+++ b/res/index.html
@@ -66,7 +66,7 @@
         <p class="run"><b>of our neighbourhood</b></p>
     </div>
     <div>
-        <p class="goat">Lorem ipsum dolor sit amet, ghjnjnkm consectetur adipiscing elit, sed donoti eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p>
+        <p class="goat">Enjoy unparraled peace of mind with state-of-art securityensuring your safety around the clock. Maitain your wellness routine in fully equiped neighbourhood park and benefit on-site health facilities. Plus, with convenient acces to nearby suparmarket, evrything you need is just moments away.    </p>
     </div>
    </div>
 
@@ -80,8 +80,7 @@
                 <img class="yam" src="../img/Rectangle 1.png" alt="">
                 </div>
                 <div>
-                <p class="right">
-                    Lorem ipsum dolor sit amet, ghjnjnkm consectetur hmbhgv adipiscing elit, sed donoti eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
+                <p class="right">Experience total peace of mind with 24/7 security at Sunnyvale. Advanced surveillance sysytems, security personnel, and secure entry your safety and privacy are always priotized </p>
                 <button class="gold">View more</button>
                 
                 </div>
@@ -101,7 +100,8 @@
          <div id="fifth-division">
             <div>
                 <h3 class="rat1">Visual tour of</h3>
-                <p class="omo"><b>sunnyvale estate</b></p>
+                <p class="omo"><b>sunnyvale estate</b></p><br>
+                <p class="new">Embark on acaptivating visual tour of Sunnyvale, where stunning architectures and lush landscapes come to life. Explore elegant interiors, manicured gardens, and luxurious amenities through high-definition imagery that shows every exquisite detail and enchanting view. Witness the seamless bleand of sophistication and comfort, and let the visuals transport you the a world of unparraledelegance. Experience the estate's charm and grandeur from the comfort of your home.  </p>
             </div>
             <div>
              <img class="big" src="../img/Frame 50.png" alt="">
@@ -117,7 +117,7 @@
             <h3 class="om">let's start</h3>
             <p class="ru"><b>a conversation</b></p>
         </div>
-        <div><p class="boss">Lorem ipsum dolor sit amet, ghjnjnkm consectetur adipiscing elit, sed donoti eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad </p></div>
+        <div><p class="boss">Invest in more than just a house; discover a place your future begins and cherished memories are made. Find your perfect home and create a haven that embraces your unique vision of comfort and hapiness. </p></div>
        </div>
         <div>
             <div class="mine">
