--- a/res/index.html
+++ b/res/index.html
@@ -101,7 +101,7 @@
             <div>
                 <h3 class="rat1">Visual tour of</h3>
                 <p class="omo"><b>sunnyvale estate</b></p><br>
-                <p class="new">Embark on acaptivating visual tour of Sunnyvale, where stunning architectures and lush landscapes come to life. Explore elegant interiors, manicured gardens, and luxurious amenities through high-definition imagery that shows every exquisite detail and enchanting view. Witness the seamless bleand of sophistication and comfort, and let the visuals transport you the a world of unparraledelegance. Experience the estate's charm and grandeur from the comfort of your home.  </p>
+                <p class="new">Embark on a captivating visual tour of Sunnyvale, where stunning architectures and lush landscapes come to life. Explore elegant interiors, manicured gardens, and luxurious amenities through high-definition imagery that shows every exquisite detail and enchanting view. Witness the seamless bleand of sophistication and comfort, and let the visuals transport you the a world of unparraledelegance. Experience the estate's charm and grandeur from the comfort of your home.  </p>
             </div>
             <div>
              <img class="big" src="../img/Frame 50.png" alt="">
@@ -125,13 +125,13 @@
                 <form action="">
                     <div class="arrange">
                         <!-- <label for="name">name </label> -->
-                        <input type="text" name="name" value="name..." required>
-                        <!-- <label for="phone number">phone number </label> -->
-                        <input type="phone" name="phone number" value="phone number" required>
+                        <input type="text" name="name" value="Name..." required>
+                        <!-- <label for="phone number">Phone number </label> -->
+                        <input type="phone" name="phone number" value="Phone number" required>
                         <!-- <label for="email">Email address</label> -->
                         <input type="email" name="email" value="Email address" required>
                         <!-- <label for="message">message</label> -->
-                        <input type="text" name="message" value="write a message" required>
+                        <input type="text" name="message" value="Write a message" required>
                     </div>
                     <button class="submit" type="submit">Submit Inquiry</button>
                 </form>
