--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SunnyVale</title>
-    <link rel="stylesheet" href="../css/group3.css">
-    <link rel="stylesheet" href="../css/sunnyvaleProject.css">
+    <link rel="stylesheet" href="sunnyvaleProject.css">
     <script src="https://kit.fontawesome.com/70411f3a4b.js" crossorigin="anonymous"></script>
 </head>
 <body>
