--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
  <div id="first-division">
     <h3 class="i">DELIVERING PREMIUM SERVICES</h3>
     <p class="ii">Exceeding expectation swith every detail, delivering premium services that excellence.</p>
-    <img class="gun" src="../img/Frame 7.png" width="1200px" height="747px" alt="">
-    <div class="arrow-down"><a href="#form"><img width="40px" class="arrow-down1" src="../img/arrow-down.png" alt="arrow-down image"> </a></div>
+    <img class="gun" src="Frame 7.png" width="1200px" height="747px" alt="">
+    <div class="arrow-down"><a href="#form"><img width="40px" class="arrow-down1" src="arrow-down.png" alt="arrow-down image"> </a></div>
 
  </div> <br>
 
@@ -52,7 +52,7 @@
              Experience the timeless elegance of sunnyvale, where architectural grandeur meets luxurious comfort. Stroll through manicured gardens, indulged in opolent interiors, and savor unique amenities designed for ultimate relaxation and refinement. Discover a sanctuary where every detail invites you to create unforgettable moments. 
         </div>
         <div>
-            <img class="image" src="../img/Frame 9.png" alt="">
+            <img class="image" src="Frame 9.png" alt="">
         </div>
     </div>
 
@@ -76,7 +76,7 @@
                 <h4>24/7 security</h4>
             <div class="image-flex">
                 <div>
-                <img class="yam" src="../img/Rectangle 1.png" alt="">
+                <img class="yam" src="Rectangle 1.png" alt="">
                 </div>
                 <div>
                 <p class="right">Experience total peace of mind with 24/7 security at Sunnyvale. Advanced surveillance sysytems, security personnel, and secure entry your safety and privacy are always priotized </p>
@@ -87,11 +87,11 @@
         </div>
             <div>
                 <h4>gym & health</h4>
-                <img src="../img/Frame 29.png" alt="">
+                <img src="Frame 29.png" alt="">
             </div>
             <div>
                 <h4>supermarkets</h4>
-                <img src="../img/Frame 29 (1).png" alt="">
+                <img src="Frame 29 (1).png" alt="">
             </div>
         </div>
 
@@ -103,7 +103,7 @@
                 <p class="new">Embark on a captivating visual tour of Sunnyvale, where stunning architectures and lush landscapes come to life. Explore elegant interiors, manicured gardens, and luxurious amenities through high-definition imagery that shows every exquisite detail and enchanting view. Witness the seamless bleand of sophistication and comfort, and let the visuals transport you the a world of unparraledelegance. Experience the estate's charm and grandeur from the comfort of your home.  </p>
             </div>
             <div>
-             <img class="big" src="../img/Frame 50.png" alt="">
+             <img class="big" src="img/Frame 50.png" alt="">
             </div>
          </div>
 
