--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
         </div>
         <div>
             <div class="icons">
-            <a href="https://twitter.com"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://wa.me/2348063564014/?text=Buisness%consultant"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://wa.me/2348063564014/?text=Buisness%consultant" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </div>
             © 2024 BEU SunnyVale Estate All Rights Reserved
         </div>
